# coincfinder

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Nicely_Plotted_various_diffs.py  README.md  compile_commands.json  playback_timeseries.py  plot_everything.py  plot_rate_consecutive.py  plot_rates_all.py  plot_timeseries_all.py  run_all_coincpairs.sh  summarize_delay_folders.py  test_pybind_api.py  test_sqrt_fft_ifft.py
.cache/clangd/index/: CoincFinder.cpp.D16DA5509C5E299A.idx  CoincPairs.cpp.3907FCBC0F5389B5.idx  Coincidences.cpp.F71FDA7C4034D9B5.idx  Coincidences.h.7716AAFB20E6FC8F.idx  ReadCSV.cpp.E2A9D10A84C4A332.idx  ReadCSV.h.FF14CB7CD456265F.idx  RollingSingles.cpp.995DF336D9F69844.idx  RollingSingles.h.51B47A760AC2023C.idx  Singles.h.1B6EDC0B2248A74A.idx  bindings.cpp.E531BB365D58660B.idx
Testing/: TestRolling.cpp
docs/: coinpairs.md
include/: Coincidences.h  ReadCSV.h  RollingSingles.h  Singles.h
src/: CoincFinder.cpp  CoincFinderTests.cpp  CoincPairs.cpp  Coincidences.cpp  ReadCSV.cpp  RollingSingles.cpp  bindings.cpp
